# Legify

./: .dockerignore  .env.example  .gitignore  .venv  COMPETITORS.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  README.md  VISHNU_REVIEW.md  app.js  app.py  feedback.db  feedback.db-journal  indiankanoon.py  ingest.py  landing.css  landing.html  main.py  make_whatsapp_prd_pdf.py  prompts.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements-harvest.txt  requirements.txt  translate.py
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  CHAT_FEATURE.md  DEPLOYMENT.md  DRAFT_DNA_DESIGN.md  ONBOARDING.md  SEO_DISTRIBUTION.md  WHATSAPP_BOT_PRD.md  bolna_agent_kb.md  bolna_agent_prompt.md
docs/email_templates/: README.md  welcome.html  welcome.txt
docs/i18n/: bakeoff-discharge_239-mr.html  discharge_239-mr-rendered.html  discharge_239-mr.html  preview-marathi-editor.html
headnote/: __init__.py  config.py  decompose.py  demo_responses.py  situation_pipeline.py  statute_map.py  translate.py  translate_input.py  verify.py
headnote/api/: __init__.py  admin.py  admin_v2.py  app.py  assist.py  auth_otpless.py  bolna.py  case_viewer.py  cases.py  chat.py  consultations.py  daily.py  documents.py  draft_dna.py  judgment_chat.py  judgments.py  lawyer_profile.py  lexicon.py  me.py  memorandum.py  models.py  onboarding.py  partners_admin.py  payments.py  pdf.py  ratelimit.py  saved_caselaw.py  telemetry.py  whatsapp.py
headnote/cases/: __init__.py  daily_links.py  daily_send.py  dateutil.py  ecourts_client.py  mapping.py  storage.py
headnote/consultations/: __init__.py  report.py  storage.py
legacy/: app_streamlit.py
migrations/: 001_subscriptions_and_entitlements.sql  002_lawyer_profile.sql  003_assist_requests.sql  004_partners_and_referrals.sql  005_renewal_nudge.sql  006_user_profiles_welcome_sent.sql  006_whatsapp_bot.sql  007_bolna_sales_pipeline.sql  007_whatsapp_drafting.sql  008_saved_caselaw.sql  009_matters.sql  010_draft_dna.sql
scripts/: HARVEST_README.md  backfill_embeddings.py  backfill_facts.py  backfill_metadata.py  build_judgments_core.py  build_shippable_corpus.py  extract_sc_text.py  harvest_hf_corpus.py  i18n_bakeoff.py  i18n_prototype.py  ingest_opendata_sc.py  kruti_to_unicode.py  make_og_image.py  preview_judgments.py  push_bolna_agent.py  scrape_sci.py  smoke_kanoon.py  sync_skill_refs.py  upload_corpus_to_hf.py  validate_drafting.py  validate_harvest.py
static/: admin-assist.html  admin-dashboard.html  admin-partners.html  admin.html  analytics.js  app.js  assist.html  auth-test.html  auth.js  case-viewer.html  cases.html  contact.html  corpus.html  daily.html  demo.html  documents.html  draft-bail.html  draft-complaint.html  draft-court.html  draft-defamation.html  draft-discharge.html  draft-editor.html  draft-home.html  draft-maintenance.html  draft-new.html  draft-recovery.html  draft-rent.html  draft-rfa.html  draft-smart.html  draft-template.html  draft-v2.html  drafter.html  i18n-switch.js  index.html  landing.css  landing.html  landing.js  legal-ai.html  payment-failed.html  payment-success.html  (+11 more)
templates_reference/: README.md
tests/: conftest.py  test_cost_dashboard.py  test_draft_dna.py  test_endpoints_routing.py  test_headnote_pipeline.py  test_hidden_authorities.py  test_model_router.py  test_parser.py  test_retrieval.py  test_telemetry_and_admin.py  test_translation.py  test_verify.py
(+145 files in other folders)
